# keyword-planner

./: authorize_google_sheet.py  build_the_list.py  build_the_service.py  client_secret.json  generate_keyword_ideas.py  google-ads.yaml  helpers.py  main.py  manage_google_sheets.py  output.xlsx  pyproject.toml  sheets.googleapis.com-python.json  test.ipynb  test_gspread.ipynb
.ipynb_checkpoints/: test-checkpoint.py
